--- a/bank.html
+++ b/bank.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>เลือกประเภทการฝาก</title>
-  <!-- ใช้ฟอนต์เดียวกับ Mission_Save -->
+  <!-- ฟอนต์ Prompt -->
   <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
@@ -30,17 +30,17 @@
     }
 
     h1 {
-  font-family: 'Prompt', sans-serif;
-  color: #1565c0;
-  margin-bottom: 35px;   
-}
+      font-family: 'Prompt', sans-serif;
+      color: #1565c0;
+      margin-bottom: 25px;   
+    }
 
     .button {
       display: flex;
       align-items: center;
       justify-content: center;
       gap: 0.5rem;
-      width: 90%;
+      width: 100%;
       padding: 16px;
       font-size: 18px;
       font-weight: 500;
@@ -73,12 +73,13 @@
 
     @media (max-width: 480px) {
       h1 {
-        font-size: 1.6rem;
+        font-size: 1.5rem;
+        margin-bottom: 20px;
       }
 
       .button {
         font-size: 16px;
-        padding: 14px;
+        padding: 12px;
       }
     }
   </style>
