--- a/bank.html
+++ b/bank.html
@@ -1,38 +1,37 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>เลือกประเภทการฝาก</title>
-  <!-- ฟอนต์ Prompt -->
   <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Prompt', sans-serif;
-      background: linear-gradient(135deg, #e3f2fd, #bbdefb);
+      font-family: "Prompt", sans-serif;
+      background-color: #e3f2fd;
       margin: 0;
-      padding: 0;
+      padding: 20px;
+      color: #333;
       display: flex;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
       min-height: 100vh;
     }
 
     .container {
-      background: #fff;
-      border-radius: 20px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
-      padding: 30px 20px;
-      max-width: 400px;
-      width: 90%;
+      background-color: #ffffffdd;
+      border-radius: 16px;
+      box-shadow: 0 6px 16px rgba(0,0,0,0.1);
+      padding: 50px 40px;
+      max-width: 700px;
+      width: 100%;
       text-align: center;
-      animation: fadeIn 0.8s ease-in-out;
     }
 
-    h1 {
-      font-family: 'Prompt', sans-serif;
+    h2 {
+      font-size: 1.8rem;
       color: #1565c0;
-      margin-bottom: 25px;   
+      margin-bottom: 30px;
     }
 
     .button {
@@ -41,54 +40,50 @@
       justify-content: center;
       gap: 0.5rem;
       width: 100%;
-      padding: 16px;
-      font-size: 18px;
-      font-weight: 500;
+      padding: 14px 20px;
+      font-size: 1.1rem;
       background-color: #64b5f6;
-      color: #fff;
+      color: white;
       border: none;
-      border-radius: 12px;
+      border-radius: 10px;
       cursor: pointer;
-      box-shadow: 0 4px 10px rgba(100, 181, 246, 0.4);
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      transition: background-color 0.3s, transform 0.2s;
       margin: 12px 0;
-      transition: all 0.3s ease;
     }
 
     .button:hover {
       background-color: #42a5f5;
-      transform: translateY(-3px) scale(1.03);
-      box-shadow: 0 6px 14px rgba(66, 165, 245, 0.6);
-    }
-
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: translateY(20px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
+      transform: scale(1.03);
     }
 
     @media (max-width: 480px) {
-      h1 {
+      .container {
+        padding: 30px 20px;
+      }
+
+      h2 {
         font-size: 1.5rem;
-        margin-bottom: 20px;
       }
 
       .button {
-        font-size: 16px;
-        padding: 12px;
+        font-size: 1rem;
+        padding: 12px 16px;
       }
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>เลือกประเภทการฝาก 🩵</h1>
-    <button class="button" onclick="location.href='fixed.html'">💵 ฝากประจำ</button>
-    <button class="button" onclick="location.href='saving.html'">💸 ฝากออมทรัพย์</button>
+    <h2>เลือกประเภทการฝาก 🩵</h2>
+
+    <button class="button" onclick="location.href='fixed.html'">
+      💵 ฝากประจำ
+    </button>
+
+    <button class="button" onclick="location.href='saving.html'">
+      💸 ฝากออมทรัพย์
+    </button>
   </div>
 </body>
 </html>
